# synth1-dataset

./: README.md  midisettings.ccm  pyproject.toml
synth1-dataset/: __main__.py  constants.py  generate.py  generate_csv.py  generate_sounds.py
