[tool.poetry]
name = "synth1-dataset"
version = "0.1.0"
description = ""
authors = ["OdysseasKr <OdysseasKr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rarfile = "^4.0"
pandas = "^1.5.1"
click = "^8.1.3"
mido = "^1.2.10"
pyaudio = "^0.2.13"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
